# SoundGroove

./: .gitignore  AGENTS.md  README.md  ai_handoff.md  settings.gradle.kts
_bmad-output/: project-context.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_back.xml  ic_brand_note.xml  ic_brand_waveform.xml  (+24 more)
desktop-web/: .gitignore  README.md  dev.ps1  index.html  package-lock.json  package.json
desktop-web/src/: App.tsx  index.html  main.js  styles.css
desktop-web/src-tauri/: Cargo.toml  tauri.conf.json
desktop-web/src-tauri/capabilities/: default.json
desktop-web/src-tauri/permissions/: app-commands.toml
desktop-web/src-tauri/src/: filename.rs  lib.rs  library.rs  main.rs  metadata.rs  mpv.rs  remote.rs  scan.rs
desktop-web/src/lib/: tauriCommands.ts
docs/: DEVICE_QA_CHECKLIST.md  FEATURES_C_SHARED_ELEMENT.md  FEATURES_LYRICS_WEB_SEARCH.md  NAVIGATION_CONTRACT.md  QUALITY_DATA_UI_FIXES.md  ROADMAP_APP_NEXT.md  SMOKE_TEST_CHECKLIST.md  STORAGE_AND_CACHE.md  UX_MOTION_GUIDELINES.md
docs/brand-exploration/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: generate_icon_assets.py  generate_launcher_assets.py
tools/: split_main_activity.py
website/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/: AppMockup.tsx  AppScreens.tsx  DownloadButton.tsx  FAQ.tsx  Features.tsx  Footer.tsx  InstallGuide.tsx  Privacy.tsx
website/public/downloads/: .gitkeep
(+121 files in other folders)
