[package]
name = "soundgroove-desktop"
version = "0.1.0"
description = "SoundGroove desktop (Tauri + mpv)"
authors = ["SoundGroove"]
edition = "2021"

[lib]
name = "soundgroove_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
