[package]
name = "desktop-web"
version = "0.1.0"
description = "SoundGroove desktop (Tauri) — bibliothèque locale, tags et pochettes"
authors = ["SoundGroove"]
edition = "2021"

[lib]
name = "desktop_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
walkdir = "2"
base64 = "0.22"
regex = "1"
once_cell = "1"
parking_lot = "0.12"
tiny_http = "0.12"
sha2 = "0.10"
hex = "0.4"
rfd = "0.15"
